# claude-setup

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  GUIA_CLAUDE_CODE.md  README.md  install.ps1  install.sh  pyproject.toml  user-settings.json
.claude/: settings.json  settings.local.json
.claude/agents/: code-reviewer.md  docs-maintainer.md  refactorer.md  test-writer.md
.claude/commands/: audit.md  changelog.md  commit.md  docs-build.md  docs.md  implement-spec.md  lint.md  refactor.md  release.md  review.md  spec.md  state.md  test.md  vision.md
.claude/hooks/: post-tool-use.sh  pre-stop.sh
.github/workflows/: ci.yml  release.yml
docs/: STATE.md  VISION.md  changelog.md  index.md
docs/modules/: README.md  _template.md
docs/specs/: 0001-ejemplo.md  README.md  _template.md
scripts/: gen_ref_pages.py
