[project]
name = "mi-paquete"
version = "0.1.0"
description = "Descripción breve del paquete."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Tu Nombre", email = "tu@email.com" }]
license = { text = "MIT" }
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Añade aquí las dependencias de runtime
]

[project.optional-dependencies]
# Extras opcionales del paquete (instalables con `uv sync --extra <nombre>`)

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/usuario/mi-paquete"
Issues = "https://github.com/usuario/mi-paquete/issues"

# -----------------------------------------------------------------------------
# Build system
# -----------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mi_paquete"]

# -----------------------------------------------------------------------------
# Ruff (lint + format)
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "RUF",  # ruff-specific
    "TID",  # tidy imports
    "TCH",  # type-checking imports
    "PL",   # pylint
    "PT",   # pytest style
    "RET",  # return statements
    "S",    # bandit (seguridad)
    "A",    # builtins shadowing
    "ARG",  # unused arguments
    "ERA",  # eradicate (código comentado)
]
ignore = [
    "E501",   # line-too-long (lo gestiona el formatter)
    "PLR0913", # too-many-arguments (decisión de diseño caso a caso)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts permitidos en tests
    "PLR2004", # números mágicos OK en tests
    "ARG",     # fixtures pueden no usarse explícitamente
]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mi_paquete"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# -----------------------------------------------------------------------------
# mypy (type checking)
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = true
no_implicit_reexport = true
show_error_codes = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Más relajado en tests

# -----------------------------------------------------------------------------
# Pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
markers = [
    "slow: tests lentos (se omiten por defecto con -m 'not slow')",
    "integration: tests de integración (requieren servicios externos)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:.*",
]

# -----------------------------------------------------------------------------
# Coverage
# -----------------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# -----------------------------------------------------------------------------
# uv
# -----------------------------------------------------------------------------
[tool.uv]
package = true
